# webgpu-avatar-client

./: Cargo.toml  LICENSE  README.md  a2f-bridge.js  avatar-webgl2.js  avatar-webgpu.js  index.html  package-lock.json  package.json  piper-tts.js  safari_debug.js  test_webgpu.html  viseme-sync.js  viseme.js
assets/shaders/: image.wgsl  rect.wgsl
pkg/: wasm_markdown_chat.d.ts  wasm_markdown_chat.js  wasm_markdown_chat_bg.wasm.d.ts
src/: a2f-client.js  app.js  app.rs  audio-worklet.js  diag.html  index.html  lib.rs  main.rs  personaplex-client.js  riva-tts-client.js  webgl2_renderer.js  webgpu_renderer.js
src/avatar/: blendshape.rs  mesh.rs  mod.rs  renderer.rs
src/chat/: kimi.rs  mod.rs  stream.rs
src/gpu/: context.rs  image_pipeline.rs  mod.rs  offscreen.rs  rect_pipeline.rs  text_pipeline.rs
src/markdown/: layout.rs  mod.rs  parser.rs  renderer.rs
src/theme/: colors.rs  mod.rs  syntax.rs
